--- a/mainapp/templates/navbar.html
+++ b/mainapp/templates/navbar.html
@@ -32,7 +32,7 @@
 </style>
 
 <header>
-  <h3>App Name</h3>
+  <h3>SAVE-IT</h3>
   <span class="hello-msg">Hello, {{request.user}}</span>
   <a class="hbt" href="{% url 'home' %}">Home</a>
   <a href="{% url 'logout' %}"><button type="button" class="logbt" >Logout</button></a>
