--- a/mainapp/templates/login.html
+++ b/mainapp/templates/login.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>App Name</h1>
+        <h1>SAVE-IT</h1>
     </header>
 
     <nav>
@@ -81,6 +81,8 @@
         </div>
     </main>
     <footer class="foot">
+		<p class="found-name">Make your Khaatabook organised and stable.</p>
+		<p class="found-name">Here you can save your customer and their all information with us.</p>
         <h4 class="found">Founder</h4>
         <h5 class="found-name">Rishabh Gupta</h5>
     </footer>
