--- a/mainapp/templates/updatecollection.html
+++ b/mainapp/templates/updatecollection.html
@@ -144,7 +144,13 @@
 								{{form.customer}}
 							</div>
 						</div>
+
+							{% for message in messages %}
+							<p id="messages">{{message}}</p>
+							{% endfor %}
+
 							<div class="d-flex justify-content-center mt-3 login_container">
+								<input type="hidden" name="next" value="{{ request.path }}">
 				 				<input class="btn login_btn" type="submit" name="Submit">
 				   			</div>
 							<div class="mt">
