--- a/mainapp/templates/navbar.html
+++ b/mainapp/templates/navbar.html
@@ -15,20 +15,21 @@
       font-family: monospace;
   }
 
+  .hbt{
+    float: right;
+  }
   
   .logbt{
       float: right;
+      margin-right: 5px;
   }
-
 
   .hello-msg{
     font-size: 18px;
     color: #fff;
   }
 
-  .hbt{
-    margin-left: 1100px;
-  }
+  
 </style>
 
 <header>
