--- a/mainapp/templates/updatecollection.html
+++ b/mainapp/templates/updatecollection.html
@@ -135,15 +135,9 @@
 							</div>
 						</div>
 
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
-							</div>
+						{{form.customer.as_hidden}}
 
-							<div class="form-control">
-								{{form.customer}}
-							</div>
-						</div>
+	
 
 							{% for message in messages %}
 							<p id="messages">{{message}}</p>
