--- a/mainapp/templates/create_collection.html
+++ b/mainapp/templates/create_collection.html
@@ -135,16 +135,8 @@
 							</div>
 						</div>
 
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
-							</div>
-
-							<div class="form-control">
-								{{form.customer}}
-							</div>
-						</div>
-
+						{{form.customer.as_hidden}}
+						
 							{% for message in messages %}
 							<p id="messages">{{message}}</p>
 							{% endfor %}
