--- a/mainapp/templates/customer.html
+++ b/mainapp/templates/customer.html
@@ -20,7 +20,7 @@
 		<div class="card card-body">
 			<h5> Information</h5>
 			<hr>
-			<p>Due Amount: {{customer.due}}</p>
+			<p>Due Amount: {{due}}</p>
 			<p>Phone: {{customer.phone}}</p>
 			<p>Address: {{customer.address}}</p>
 		</div>
