--- a/mainapp/templates/update_customer.html
+++ b/mainapp/templates/update_customer.html
@@ -116,14 +116,14 @@
 
 								<input type="phone" name="phone" class="form-control" {{form.phone}}>
 						</div>
-
+					<!--
 						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
 
 								<input type="number" name="due" placeholder="Due Amount" class="form-control" {{form.due}}>
-						</div>
+						</div>-->
 
 						<div class="input-group mb-2">
 							<div class="input-group-append">
